--- a/index.html
+++ b/index.html
@@ -316,8 +316,7 @@ input, select, button {
       <p class="msg">Traveling?</p>
             <div class="option-card" data-value="yes"><div class="info">Local</div></div>
       <div class="option-card" data-value="no"><div class="info">Visiting</div></div>
-      <button class="btn gold auto-show" id="localNext" onclick="next(2)" style="display:none;">Next</button></div>
-
+      <button class="btn gold centered-next" onclick="next(currentStep + 1)">Next</button>
     <div id="step2" class="step">
       <button class="btn back"><svg viewBox="0 0 24 24" fill="none" stroke="#FFD700" stroke-width="3"><path d="M19 12H5M12 19l-7-7 7-7"/></svg></button>
       <p class="msg">Where are you departing from?</p>
@@ -388,7 +387,7 @@ input, select, button {
       <button class="btn back"><svg viewBox="0 0 24 24" fill="none" stroke="#FFD700" stroke-width="3"><path d="M19 12H5M12 19l-7-7 7-7"/></svg></button>
       <p class="msg">Parish?</p>
       <div id="parish-options"></div>
-      <button class="btn gold" id="parishNext" style="display:none;">Next</button>
+      <button class="btn gold centered-next" onclick="next(5)">Next</button>
     </div>
 
     <div id="step5" class="step">
@@ -396,7 +395,7 @@ input, select, button {
       <p class="msg">Coastal or Inland?</p>
             <div class="option-card" data-value="coastal"><div class="info">Coastal</div></div>
       <div class="option-card" data-value="inland"><div class="info">Inland</div></div>
-      <button class="btn gold auto-show" id="vibeNext" onclick="next(6)" style="display:none;">Next</button></div>
+      <button class="btn gold centered-next" onclick="next(currentStep + 1)">Next</button>
 
     <div id="step6" class="step">
       <button class="btn back"><svg viewBox="0 0 24 24" fill="none" stroke="#FFD700" stroke-width="3"><path d="M19 12H5M12 19l-7-7 7-7"/></svg></button>
@@ -728,6 +727,13 @@ document.addEventListener('click', e => {
       const nextBtn = e.target.closest('.step').querySelector('.auto-show');
       if (nextBtn) nextBtn.style.display = 'block';
     }, 100);
+  }
+});
+  // Universal Next button show
+document.addEventListener('click', e => {
+  if (e.target.closest('.option-card')) {
+    const btn = document.querySelector('.centered-next');
+    if (btn) btn.classList.add('visible');
   }
 });
   updateProgress();
